[tool.poetry]
name = "AndroStats"
version = "0.1.13"
description = "Stats for andrology"
authors = ["M-Jeffryes <michael@maleboxhealth.com>"]
readme = "README.md"
packages = [{include = "AndroStats"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "3.8.3"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.0"
versioneer = "^0.29"
ipykernel = "^6.29.4"
black = "^24.4.2"
mypy = "^1.10.0"
types-setuptools = "^70.0.0.20240524"
pandas-stubs = "^2.2.2.240603"

[tool.poe.tasks]
lint = "black --check ."
lint-fix = "black ."
type-check = "mypy AndroStats --strict"
test = "pytest"

[tool.black]
line-length = 180

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
